test_suite/tests/ui/enum-representation/integer-struct.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde(integer)]
struct S;

fn main() {}
